--- a/index.html
+++ b/index.html
@@ -4,37 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Order summary card</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
+    <div class="container">
+      <div class="card">
+        <img
+          class="img"
+          src="images/illustration-hero.svg"
+          alt="illustration girl with headphones listening to music on her phone"
+        />
+        <div class="card-title">Order Summary</div>
+        <p class="card-description">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+        <div class="card-plan">
+          <img src="images/icon-music.svg" alt="music icon" class="plan-icon" />
+          <div class="plan">
+            <div class="plan-type">Annual Plan</div>
+            <div class="plan-price">$59.99/year</div>
+          </div>
+          <a href="" class="plan-change">Change</a>
+        </div>
+        <div class="card-actions">
+          <a href="" class="btn btn--primary">Proceed to Payment</a>
+          <a href="" class="btn btn--secondary">Cancel Order </a>
+        </div>
+      </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://bahram.dev">Bahram Movlanov</a>.
+      </div>
     </div>
   </body>
 </html>
