media queries for mobile view

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://bahram.dev">Bahram Movlanov</a>.
+        >. Coded by
+        <a href="https://bahram.dev" target="_blank">Bahram Movlanov</a>.
       </div>
     </div>
   </body>
